Translate 05_io.md via GitLocalize

--- a/async-book-ru/src/02_execution/05_io.md
+++ b/async-book-ru/src/02_execution/05_io.md
@@ -1,30 +1,36 @@
 # Исполнители и системный ввод/вывод
 
-In the previous section on [The `Future` Trait](./02_future.md), we discussed this example of
-a future that performed an asynchronous read on a socket:
+В главе ["Типаж `Future`"](./02_future.md), мы обсуждали такой 
+пример `future`, которая выполняет асинхронное чтение сокета:
 
 ```rust
 {{#include ../../examples/02_02_future_trait/src/lib.rs:socket_read}}
 ```
 
-This future will read available data on a socket, and if no data is available,
-it will yield to the executor, requesting that its task be awoken when the
-socket becomes readable again. However, it's not clear from this example how
-the `Socket` type is implemented, and in particular it isn't obvious how the
-`set_readable_callback` function works. How can we arrange for `lw.wake()`
-to be called once the socket becomes readable? One option would be to have
-a thread that continually checks whether `socket` is readable, calling
-`wake()` when appropriate. However, this would be quite inefficient, requiring
-a separate thread for each blocked IO future. This would greatly reduce the
-efficiency of our async code.
+Эта `future` читает доступные данные из сокета и если доступных 
+данных нет, то она будет передана исполнителю с запросом 
+активирования задачи, если сокет снова станет читаемым. Однако, 
+из текущего примера не ясна реализация типа 
+`Socket` и, в частности, не совсем очевидно как 
+работает функция `set_readable_callback`. Как мы 
+можем сделать так, чтобы `lw.wake()` был вызван, 
+когда сокет станет читаемым? Один из вариантов - иметь поток, 
+который постоянно проверяет стал ли `socket` 
+читаемым, вызывая при необходимости метод 
+`wake()`. Тем не менее, такой подход будет весьма не 
+эффективным, так как он требует отдельного потока для каждой 
+блокирующей IO `future`. Это значительно снизит эффективность 
+нашего асинхронного кода.
 
-In practice, this problem is solved through integration with an IO-aware
-system blocking primitive, such as `epoll` on Linux, `kqueue` on FreeBSD and
-Mac OS, IOCP on Windows, and `port`s on Fuchsia (all of which are exposed
-through the cross-platform Rust crate [`mio`](https://github.com/tokio-rs/mio)). These primitives all allow
-a thread to block on multiple asynchronous IO events, returning once one of
-the events completes. In practice, these APIs usually look something like
-this:
+На практике эта проблема решается при помощи интеграции с 
+IO - зависимыми системными блокирующими примитивами такими, 
+как `epoll` в Linux, `kqueue` во FreeBSD и
+Mac OS, `IOCP` в Windows и `port` в Fuchsia (все они 
+предоставляются при помощи кроссплатформенного Rust-пакета 
+[`mio`](https://github.com/tokio-rs/mio)). Все эти примитивы позволяют потоку 
+заблокироваться с несколькими асинхронными IO-событиями, 
+возвращая одно из завершённых событий. На практике эти API 
+выглядят примерно так:
 
 ```rust
 struct IoBlocker {
@@ -32,31 +38,31 @@ struct IoBlocker {
 }
 
 struct Event {
-    // An ID uniquely identifying the event that occurred and was listened for.
+    // ID уникально идентифицирующее событие, которое уже произошло и на которое мы подписались.
     id: usize,
 
-    // A set of signals to wait for, or which occurred.
+    // Набор сигналов для ожидания или которые произошли.
     signals: Signals,
 }
 
 impl IoBlocker {
-    /// Create a new collection of asynchronous IO events to block on.
+    /// Создаём новую коллекцию асинхронных IO-событий для блокировки.
     fn new() -> Self { ... }
 
-    /// Express an interest in a particular IO event.
+    /// Проявим интерес к определённому IO-событию.
     fn add_io_event_interest(
         &self,
 
-        /// The object on which the event will occur
+        /// Объект, на котором происходит событие
         io_object: &IoObject,
 
-        /// A set of signals that may appear on the `io_object` for
-        /// which an event should be triggered, paired with
-        /// an ID to give to events that result from this interest.
+        /// Набор сигналов, которые могут применяться к `io_object`,
+        /// для которых должно быть инициировано событие, в паре с
+        /// ID, которые передадутся событиям, получившимся в результате нашего интереса.
         event: Event,
     ) { ... }
 
-    /// Block until one of the events occurs.
+    /// Заблокируется до появления одного из событий.
     fn block(&self) -> Event { ... }
 }
 
@@ -71,7 +77,7 @@ io_blocker.add_io_event_interest(
 );
 let event = io_blocker.block();
 
-// prints e.g. "Socket 1 is now READABLE" if socket one became readable.
+// выведет что-то похожее на "Socket 1 is now READABLE", если сокет станет доступным для чтения.
 println!("Socket {:?} is now {:?}", event.id, event.signals);
 ```
 
@@ -82,17 +88,16 @@ println!("Socket {:?} is now {:?}", event.id, event.signals);
 ```rust
 impl Socket {
     fn set_readable_callback(&self, waker: Waker) {
-        // `local_executor` is a reference to the local executor.
-        // this could be provided at creation of the socket, but in practice
-        // many executor implementations pass it down through thread local
-        // storage for convenience.
+        // `local_executor` это ссылка на локальный исполнитель.
+        // это может быть предусмотрено при создании сокета, 
+        // большинство реализаций исполнителей делают это через локальный поток, так удобнее.
         let local_executor = self.local_executor;
 
-        // Unique ID for this IO object.
+        // Уникальный ID для объекта ввода вывода.
         let id = self.id;
 
-        // Store the local waker in the executor's map so that it can be called
-        // once the IO event arrives.
+        // Сохраним `waker` в данных исполнителя,
+        // чтобы его можно было вызвать после того как будет получено событие.
         local_executor.event_map.insert(id, waker);
         local_executor.add_io_event_interest(
             &self.socket_file_descriptor,
@@ -102,7 +107,7 @@ impl Socket {
 }
 ```
 
-We can now have just one executor thread which can receive and dispatch any
-IO event to the appropriate `Waker`, which will wake up the corresponding
-task, allowing the executor to drive more tasks to completion before returning
-to check for more IO events (and the cycle continues...).
+Теперь у нас может быть только один поток исполнителя, который может принимать и отправлять любые
+события ввода-вывода в соответствующий `Waker`, который разбудит соответствующую
+задачу, позволяющая исполнителю довести больше задач до завершения перед возвратом,
+чтобы проверить больше событий ввода-вывода (и цикл продолжается...).
