--- a/async-book-ru/src/02_execution/05_io.md
+++ b/async-book-ru/src/02_execution/05_io.md
@@ -82,7 +82,7 @@ println!("Socket {:?} is now {:?}", event.id, event.signals);
 ```
 
 Исполнители `Future` могут использовать эти примитивы для предоставления асинхронных объектов ввода-вывода,
-таких как сокеты, которые могут настроить обратные вызовы для запуска при определенном событии ввода-вывода. В случае нашего примера `SocketRead` выше,
+таких как сокеты, которые могут настроить обратные вызовы для запуска при определённом событии ввода-вывода. В случае нашего примера `SocketRead` выше,
 `Socket::set_readable_callback` функция может выглядеть следующим псевдокодом:
 
 ```rust
