Translate 05_io.md via GitLocalize

--- a/async-book-ru/src/02_execution/05_io.md
+++ b/async-book-ru/src/02_execution/05_io.md
@@ -25,7 +25,7 @@ IO-зависимыми системными блокирующими прими
 как `epoll` в Linux, `kqueue` во FreeBSD и
 Mac OS, `IOCP` в Windows и `port` в Fuchsia (все они
 предоставляются при помощи кроссплатформенного Rust-пакета
-{a3}{code4}mio{/code4}{/a3}). Все эти примитивы позволяют потоку
+[`mio`]). Все эти примитивы позволяют потоку
 заблокироваться с несколькими асинхронными IO-событиями,
 возвращая одно из завершённых событий. На практике эти API
 выглядят примерно так:
@@ -110,3 +110,4 @@ impl Socket {
 
 
 ["Типаж `Future`"]: ./02_future.md
+[`mio`]: https://github.com/tokio-rs/mio
